--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,9 @@ tree:
 // https://www.guru99.com/avl-tree.html
 // https://www.geeksforgeeks.org/insertion-in-an-avl-tree/
 
+- Fenwick tree
+
 strings:
 - KMP
 - Ranin Karp
 - Longest Common Substring
-
